@@ -1,3 +1,5 @@
+* Allow to reconcile many group of lines with Line.reconcile
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 * Allow to keep original taxes when applying a tax rule
